--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </footer>
       <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script src="script.js" type="text/javascript"></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3vh_dIMVBhj9ZUNzVdNOwdMoMZzADQ4I&libraries=places&callback=getLocation"
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3vh_dIMVBhj9ZUNzVdNOwdMoMZzADQ4I&libraries=places&callback=showPosition"
          async defer></script>
    </body>
 </html>
