Sorting of arrival time and addition of company logos

--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
                         <img src='triangles.gif'/>
                     </div>
                     <table class="data_table">
-                      <tr>
-                        <th>Company</th>
-                        <th>Cab</th>
-                        <th>Estimate</th>
-                        <th>Arriving(in mins)</th>
-                      </tr>
+                      <tbody>
+                        <tr>
+                          <th>Company</th>
+                          <th>Cab</th>
+                          <th>Estimate</th>
+                          <th id="sorted_field">Arriving(in mins) <span>&#9650;</span></th>
+                        </tr>
+                    </tbody>
                     </table>
                     <div id='errorsContainer' style='display:none'></div>
                   </div>
