sorting and url updated

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                           <th>Company</th>
                           <th>Cab</th>
                           <th>Estimate</th>
-                          <th id="sorted_field">Arriving(in mins) <span>&#9650;</span></th>
+                          <th id="sorted_field">Arriving(in mins) <span class="sort_fields">&#9650;</span> <span class="sort_fields">&#9660;</span></th>
                         </tr>
                     </tbody>
                     </table>
